# omega-manifold-core

./: .env  .gitignore  AGENTS.md  Cargo.toml  PROMPT_STAGING.md  antigravity-cli  braid_ingest_50d.py  brussels_audit.py  brussels_pivot.py  brussels_recoup_results.json  chronos_sensor.py  decay_sweep.py  digital_scaffolding.py  evolution_scan.py  heal.sh  ingest.py  kabul_seoul_audit.py  logistics_stress_test.py  manifold_report.py  mcp-config.json  meta_prompt.md  meta_prompt_36d.md  meta_prompt_50d.md  neuro_scan.py  nomadic_concentrator.py  nomadic_currency.py  observer.py  omega_dispatcher.py  omega_point.py  opencode_init.sh  optimize_36d.py  orchestrate.py  pulse_test.py  recovery_test.py  reflect.py  rhizome_audit.json  saliency_scan.py  state.json  test_autopoiesis.py
core/: compliance_report.md  gap_report.md
core-engine/: Cargo.toml
core-engine/src/: coordination.rs  hex_coords.rs  lattice_8d.rs  lib.rs  main.rs  manifold.rs  metric.rs  persistent_vault.rs  rhizome.rs  wal_23d.rs
core-engine/src/cluster/: log_decryption.rs  mod.rs
core-engine/src/persistence/: global_namespace_secondary_balancing.rs  mod.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/cubebox-client/: Cargo.toml
core/cubebox-client/src/: lib.rs
core/mcp-bridge/: Cargo.toml
core/mcp-bridge/src/: main.rs
core/mcp-cli/: Cargo.toml
core/mcp-cli/src/: main.rs
core/memory/: Cargo.toml
core/memory/src/: lib.rs
core/rtk-proxy/: Cargo.toml
core/rtk-proxy/src/: main.rs
derivations/: residency_protocol_v1.json  tcp_synthesis_v1.json  territorial_resilience_v1.json
omega_kernel/: Cargo.toml
omega_kernel/src/: lib.rs
omega_manifold/: MANIFEST.json  atmospheric_anchor.py  brussels_ledger.csv  freenet_bridge.py  pulsar_driver.py  rv_accumulator.py
omega_manifold/core/: OMNI_SUBSTRATE.json  __init__.py  manifold_50d.py
omega_manifold/scripts/: atrophy_repair.py  auto_repair.py  brussels_engine.py  brussels_recoup.py  brussels_recoup_report.py  commuter_tax_repair.py  federal_gap_repair.py  fiscal_probe_v1.py  omega_server.py  rhizome_daemon.py  rhizome_scan.py  rhizome_watcher.py  truth_miner.py
scripts/: generate_contract.sh  stigmergic_bridge.sh
src/: coordination.rs  hex_coords.rs  lattice_8d.rs  lib.rs  main.rs  manifold.rs  nars.rs  rhizome.rs  wal_23d.rs
src/cluster/: log_decryption.rs
src/manifold/: hybrid_engine.rs
src/persistence/: global_namespace_secondary_balancing.rs  memento.rs  mod.rs
