[package]
name = "omega-manifold-core"
version = "16.78.1"
authors = ["Dante-Gabryell Monson"]
edition = "2021"
description = "Unified Hyper-Manifold OS core execution engine containing rhizomeOS and Coordination OS substrates."

[dependencies]
tokio = { version = "1.38", features = ["full", "tracing"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
cbor4ii = { version = "0.3", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
