[package]
name = "omega-mcp-bridge"
version = "16.78.1"
edition = "2021"
authors = ["Dante-Gabryell Monson"]
description = "Native MCP JSON-RPC 2.0 protocol broker connecting high-dimensional states to external clients."

[dependencies]
tokio = { version = "1.38", features = ["full", "io-std", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
