[package]
name = "omega-rtk-proxy"
version = "16.78.1"
edition = "2021"
authors = ["Dante-Gabryell Monson"]
description = "RTK token compression proxy kernel for tracking and compressing high-dimensional streams."

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
